--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
-    <title>Hyperapp boilerplate</title>
-    <meta name="description" content="Hyperapp starter kit with development on steroids">
+    <title>MTL SVG Animation</title>
+    <meta name="description" content="Manipulating svg properties with Hyperapp">
     <script defer src="./app.js"></script>
   </head>
   <body>
